22 - Animation React Components

--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -21,23 +21,20 @@
   &.order-exit-active
     transform: translateX(120%)
     padding: 0
+    max-height: 0
 
 
 .count-enter
-  background: red
   transition .5s
-  transform translateY(100%)
+  transform translateY(100%) // start of screen
   &.count-enter-active
-    background: yellow
     transform translateY(0)
 
 .count-exit
-  background: black
   transform translateY(0)
   transition .5s
   position absolute
   left 0
   bottom 0
   &.count-exit-active
-    background green
-    transform translateY(-100%) scale(3)
+    transform translateY(-100%) scale(1)
